--- a/package.json
+++ b/package.json
@@ -24,24 +24,24 @@
     "@angular/platform-browser-dynamic": "7.1.4",
     "@angular/router": "7.1.4",
     "@ks89/angular-modal-gallery": "^7.2.1",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "@ng-bootstrap/ng-bootstrap": "4.1.0",
     "@ngx-progressbar/core": "5.1.2",
-    "@ngx-toolkit/cookie": "^7.0.1",
-    "@swimlane/ngx-charts": "^10.1.0",
+    "@ngx-toolkit/cookie": "7.0.1",
+    "@swimlane/ngx-charts": "10.1.0",
     "@types/crypto-js": "3.1.43",
-    "@types/shelljs": "^0.8.3",
+    "@types/shelljs": "0.8.3",
     "bootstrap": "4.3.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.6.1",
     "crypto-js": "3.1.9-1",
-    "hammerjs": "^2.0.8",
-    "mousetrap": "^1.6.3",
+    "hammerjs": "2.0.8",
+    "mousetrap": "1.6.3",
     "ngx-image-cropper": "1.3.8",
-    "ngx-img-cropper": "^7.0.3",
+    "ngx-img-cropper": "7.0.3",
     "ngx-quill": "4.6.11",
     "ngx-toastr": "9.1.1",
     "quill": "1.3.6",
-    "shelljs": "^0.8.3",
+    "shelljs": "0.8.3",
     "tslib": "1.9.3",
     "typescript": "3.1.6",
     "zone.js": "~0.8.26"
@@ -51,10 +51,10 @@
     "@angular/cli": "7.1.4",
     "@angular/compiler-cli": "7.1.4",
     "@angular/language-service": "7.1.4",
-    "@types/hammerjs": "^2.0.36",
+    "@types/hammerjs": "2.0.36",
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.3",
-    "@types/mousetrap": "^1.6.1",
+    "@types/mousetrap": "1.6.1",
     "@types/node": "~10.12.18",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
